add jfr support, cleanup readme, add examples